Bug 370511 - Window decoration setting is not saved into look and feel package
Summary: Window decoration setting is not saved into look and feel package
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Global Theme packages (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR major
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-11 21:52 UTC by Lucas
Modified: 2017-01-04 12:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lucas 2016-10-11 21:52:28 UTC
Window decoration setting is not saved into look and feel package

Reproducible: Always

Steps to Reproduce:
1. Create a new look and feel package using Plasma lf explorer, lets call it test.
2. Change window decoration
3. Save the changes using option "Layout from current plasma setup"
4. Open system settings> look and feel, check "use desktop layout from theme" and switch to a new lf "test"package. 
5. Window decoration does not change 

Actual Results:  
Window decoration does not change

Expected Results:  
Window decoration should change
Comment 1 Marco Martin 2017-01-04 12:23:29 UTC
Git commit 81be6962b1e43ea4da7caa038fa87d84a3129937 by Marco Martin.
Committed on 04/01/2017 at 12:23.
Pushed by mart into branch 'master'.

import kwin deco and button order in l&f

Summary:
support both button order and decoration theme
of kwin when applying for a lnf theme. The deco
theme is composed by library and theme entries.
c++ themes will only use library, aurorae themes will use
theme as well.

Test Plan: created some lnf packages that customize this and applied

Reviewers: #plasma, graesslin

Reviewed By: #plasma, graesslin

Subscribers: Lucas, graesslin, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D3832

M  +14   -0    CMakeLists.txt
M  +7    -0    config-workspace.h.cmake
M  +34   -6    kcms/lookandfeel/kcm.cpp
M  +2    -0    kcms/lookandfeel/kcm.h

https://commits.kde.org/plasma-desktop/81be6962b1e43ea4da7caa038fa87d84a3129937