import kwin deco and button order in l&f

Summary:
support both button order and decoration theme
of kwin when applying for a lnf theme. The deco
theme is composed by library and theme entries.
c++ themes will only use library, aurorae themes will use
theme as well.

BUG:370511

Test Plan: created some lnf packages that customize this and applied

Reviewers: #plasma, graesslin

Reviewed By: #plasma, graesslin

Subscribers: Lucas, graesslin, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D3832